# R.c.s.a.p.r.

Old_version/: README.md  README.ru.md  client-config.json  client.py  pyproject.toml  requirements.txt  run.py
Old_version/app/: __init__.py  command_policy.py  config.py  dispatcher.py  local_ip.py  main.py  models.py  resources.py
Old_version/app/routers/: __init__.py  clients.py  commands.py  ui.py  websocket.py
Old_version/templates/: clients_ui.html  processes_ui.html
client/_internal/: client-config.json
client/_internal/websockets-16.0.dist-info/: RECORD
server/_internal/templates/: command_ui.html  index.html
